# vpopmail

./: AUTHORS  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  README.mysql  README.pgsql  README.quotas  README.vqmaillocal  TODO  UPGRADE  UPGRADE.tren  acconfig.h  authvchkpw.c  backfill.c  base64.c  base64.h  bigdir.c  boxgroup.c  clearopensmtp.c  client.c  client.h  compile  conf.c  conf.h  config.h.in  configure  configure.ac  configure.in  dotqmail2valias.c  file_lock.c  file_lock.h  git-import.sh  group.c  group.h  hmac_md5.c  ippp.c  ippp.h  maildirquota.c  (+74 more)
CVSROOT/: loginfo
attic/: README.ldap
backends/: README  module.mk.in
backends/cdb/: Makefile.in  configure  configure.ac  vcdb.c  vcdb.h  vcdb.h.in
backends/ldap/: Makefile.in  configure  configure.ac  qmailUser.schema  valias.schema  vldap.c  vldap.h.in  vpopmail.ldap
backends/mysql/: Makefile.in  configure  configure.ac  vmysql.c  vmysql.h.in  vpopmail.mysql
backends/openldap/: Makefile.in  configure  configure.ac  vopenldap.c  vopenldap.h.in  vpopmail.ldif  vpopmail.schema
backends/oracle/: voracle.pc
backends/postgres/: Makefile.in  configure  configure.ac  vpgsql.c  vpgsql.h.in
backends/sybase/: vsybase.c  vsybase.h
cdb/: Makefile
contrib/: qmail-maildir++.patch  vcdir.c
convert/: Make.vcalias  vcalias.README  vcalias.c
doc/: README.backups
doc/doc_html/: vpopmail.html  vpopmail5.abw
doc/man_html/: vdelivermail.html
ldap/: slapd.conf
vpopmail/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README!  README.00...VERY.IMPORTANT  README.activedirectory  README.build  README.debug  README.ldap  README.mysql  README.onchange  README.oracle  README.pgsql  README.quotas  README.roamingusers  README.sybase  README.vdelivermail  README.vpopmaild  RELEASE.NOTES  TODO  UPGRADE  aclocal.m4  backfill.c  bigdir.c  clearopensmtp.c  config.h.in  configure  configure.in  dotqmail2valias.c  file_lock.c  file_lock.h  hmac_md5.c  maildirquota.c  maildirquota.h  md5.c  md5.h  (+53 more)
vpopmail/cdb/: Makefile  compile  load
vpopmail/contrib/: qmail-maildir++.patch
vpopmail/convert/: vcalias.c
vpopmail/doc/: 5.0doc
vpopmail/doc/doc_html/: vpopmail.html
vpopmail/ldap/: qmailUser.schema  slapd.conf  vpopmail.ldif
vusaged/: Makefile.in  cache.c  configure  configure.ac  directory.c  directory.h  domain.c  domain.h  grow.c  grow.h  header  list.c  list.h  packet.c  packet.h  path.h  query.c  query.h  queue.c  queue.h  quota.h  shutdown.c  shutdown.h  signal.c  signal.h  socket.c  socket.h  storage.h  user.c  user.h  userstore.c  userstore.h  vdb.c  vdb.h  vusaged.c
vusaged/contrib/: rc.vusaged.in
vusaged/etc/: vusaged.conf
